<resources>
    <string name="app_name">Dokumen Kapal</string>

    <string-array name="country_arrays">
        <item>Choose Country</item>
        <item>Bangladesh</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile_data">Profile Dan Data</string>
    <string name="menu_permohonan">Permohonan</string>
    <string name="menu_notifikasi">Notifikasi</string>
    <string name="menu_share">Share</string>
    <string name="menu_signout">Keluar</string>
    <string name="syarat_masalayar">
        Syarat Pembuatan Masa layar\n
        1.Isi dan upload data buku Pelaut\n
        2.Isi dan upload data sertifikat pelaut anda** \n
        3.Isi data riwayat pelayaran anda**\n\n
        Alur Pembuatan Masa Layar\n
        1.Pastikan anda mengisi syarat pembuatan masa layar diatas\n
        2.Klik Tombol kirim permohonan dibawah ini\n
        3.Anda akan menerima notifikasi jumlah biaya dan nomor rekening untuk pembayaran\n
        4.Setelah melakukan pembayaran, mohon untuk upload bukti bayar di menu \"permohonan => masa layar\"\n

        ** Anda dapat mengisi data diatas pada menu Profil dan Data
    </string>
    <string name="syarat_sertifikat_keselamatan">
        Syarat Pembuatan Sertifikat Keselamatan\n
        1.Isi dan upload data kapal\n\n
        Alur Pembuatan Sertifikat Keselamatan\n
        1.Pastikan anda mengisi syarat pembuatan Sertifikat Keselamatan\n
        2.Klik Tombol kirim permohonan dibawah ini\n
        3.Anda akan menerima notifikasi jumlah biaya dan nomor rekening untuk pembayaran\n
        4.Setelah melakukan pembayaran, mohon untuk upload bukti bayar di menu \"permohonan => Sertifikat Keselamatan\"\n

        ** Anda dapat mengisi data diatas pada menu Profil dan Data
    </string>

    <string name="syarat_bongkarmuat">...... ........... .......... .........</string>

    <string name="mengambil_data">Mengambil data …</string>
    <string name="template_form_bayar">{TEMPLATE TEXT FORM BAYAR}</string>
    <string name="text_kirim_bukti_bayar">CARI BUKTI PEMBAYARAN</string>
    <string name="kirim_permohonan">KIRIM PERMOHONAN</string>
    <string name="text_pilih_file_pdf">Pilih file PDF</string>
    <string name="pilih_jenis_muatan">Pilih Jenis Muatan</string>
    <string name="berat_total_muatan_dalam_ton">Berat total muatan (dalam Ton)</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="error_string">error</string>

</resources>
