<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_permohonan"
            android:icon="@drawable/ic_menu_request"
            android:title="@string/menu_permohonan" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_form"
            android:title="@string/menu_profile_data" />

        <item
            android:id="@+id/nav_notifikasi"
            android:icon="@drawable/ic_menu_message"
            android:title="Notifikasi" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/menu_signout" />
        </menu>
    </item>

</menu>
