<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kapal.dokumenkapal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_menu_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.kapal.dokumenkapal.ui.menuprofiledata.MenuProfileDataFragment"
        android:label="@string/menu_profile_data"
        tools:layout="@layout/fragment_menu_profile_data" />

    <fragment
        android:id="@+id/nav_permohonan"
        android:name="com.kapal.dokumenkapal.ui.menupermohonan.MenuPermohonanFragment"
        android:label="@string/menu_permohonan"
        tools:layout="@layout/fragment_menu_permohonan" />

    <fragment
        android:id="@+id/nav_notifikasi"
        android:name="com.kapal.dokumenkapal.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.kapal.dokumenkapal.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.kapal.dokumenkapal.ui.signout.SignOutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/menu_signout" />
</navigation>