<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bongkarmuat_scroolview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white">

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/formbongkarmuat_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="#EFF3F3"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pilih_jenis_muatan"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/bongkarmuat_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/spinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Jenis Muatan"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_jenis_muatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/berat_total_muatan_dalam_ton"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_bobot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Nama Kapal Pengangkut"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_nama_kapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView_agenkapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Nama Agen Kapal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_agen_kapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView_jeniskapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Jenis Kapal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_jenis_kapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView_gtkapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="GT Kapal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_gt_kapal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />


        <TextView
            android:id="@+id/textView_jeniskendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Jenis kendaraan pengangkut"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_jenis_kendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Nopol Angkutan"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_angkutan_nopol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Nama supir"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_angkutan_supir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Tanggal Pelaksanaan"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bongkarmuat_tgl_pelaksanaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="" />

        <Button
            android:id="@+id/bongkarmuat_btnKirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#304FFE"
            android:text="@string/kirim_permohonan"
            android:textAllCaps="false"
            android:textColor="#F0E8E8"
            android:textSize="17sp" />


    </LinearLayout>
</ScrollView>